--- a/sim_band_planner/CMakeLists.txt
+++ b/sim_band_planner/CMakeLists.txt
@@ -5,7 +5,7 @@ project(sim_band_planner)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-#add_definitions(-std=c++11)
+# add_definitions(-std=c++11)
 
 find_package(ament_cmake REQUIRED)
 
@@ -22,20 +22,8 @@ find_package(cartographer_ros_msgs REQUIRED)
 
 find_package(Boost REQUIRED COMPONENTS system thread)
 
-
-#find_package(
-#    catkin REQUIRED
-#    COMPONENTS
-#        geometry_msgs
-#        gridmap
-#        nav_msgs
-#        navigation_interface
-#        pluginlib
-#        roscpp
-#        tf2_geometry_msgs
-#        tf2_ros
-#        visualization_msgs
-#)
+# find_package( catkin REQUIRED COMPONENTS geometry_msgs gridmap nav_msgs navigation_interface pluginlib roscpp
+# tf2_geometry_msgs tf2_ros visualization_msgs )
 
 find_package(OpenCV 4 REQUIRED)
 find_package(Eigen3)
@@ -43,24 +31,10 @@ add_definitions(${EIGEN3_DEFINITIONS})
 
 include_directories(include)
 
-include_directories(SYSTEM ${Eigen3_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})#${catkin_INCLUDE_DIRS})
+include_directories(SYSTEM ${Eigen3_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}) # ${catkin_INCLUDE_DIRS})
 
-#catkin_package(
-#    CATKIN_DEPENDS
-#    geometry_msgs
-#    gridmap
-#    nav_msgs
-#    navigation_interface
-#    pluginlib
-#    roscpp
-#    tf2_geometry_msgs
-#    tf2_ros
-#    visualization_msgs
-#    INCLUDE_DIRS
-#    include
-#    LIBRARIES
-#    ${PROJECT_NAME}
-#)
+# catkin_package( CATKIN_DEPENDS geometry_msgs gridmap nav_msgs navigation_interface pluginlib roscpp tf2_geometry_msgs
+# tf2_ros visualization_msgs INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} )
 
 add_library(
     ${PROJECT_NAME}
@@ -75,27 +49,34 @@ add_library(
     src/simulate.cpp
     src/plugin.cpp
 )
-#target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
+# target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
 
-# allow to find headers, see https://docs.ros.org/en/foxy/How-To-Guides/Ament-CMake-Documentation.html#adding-files-and-headers
-target_include_directories(${PROJECT_NAME}
-    PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>)
+# allow to find headers, see
+# https://docs.ros.org/en/foxy/How-To-Guides/Ament-CMake-Documentation.html#adding-files-and-headers
+target_include_directories(
+    ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>
+)
 
-ament_target_dependencies(${PROJECT_NAME} Eigen3 Boost geometry_msgs nav_msgs visualization_msgs 
-    navigation_interface tf2_geometry_msgs tf2_ros gridmap pluginlib)
+ament_target_dependencies(
+    ${PROJECT_NAME}
+    Eigen3
+    Boost
+    geometry_msgs
+    nav_msgs
+    visualization_msgs
+    navigation_interface
+    tf2_geometry_msgs
+    tf2_ros
+    gridmap
+    pluginlib
+)
 
 pluginlib_export_plugin_description_file(${PROJECT_NAME} plugin.xml)
 
-#target_link_libraries(${PROJECT_NAME}_plugin ${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+# target_link_libraries(${PROJECT_NAME}_plugin ${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
-#if(CATKIN_ENABLE_TESTING)
-#    find_package(rosunit REQUIRED)
-#    catkin_add_gtest(unit_test test/unit_test.cpp)
-#    target_link_libraries(unit_test ${PROJECT_NAME} ${OpenCV_LIBRARIES})
-#endif()
-
+# if(CATKIN_ENABLE_TESTING) find_package(rosunit REQUIRED) catkin_add_gtest(unit_test test/unit_test.cpp)
+# target_link_libraries(unit_test ${PROJECT_NAME} ${OpenCV_LIBRARIES}) endif()
 
 install(
     TARGETS ${PROJECT_NAME}
@@ -111,24 +92,14 @@ install(
     PATTERN ".svn" EXCLUDE
 )
 
-#install(
-#    TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_plugin
-#    ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#    LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-#)
+# install( TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_plugin ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION} LIBRARY
+# DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION} RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
 
-ament_export_libraries(
-    ${PROJECT_NAME}
-)
-ament_export_targets(
-  export_${PROJECT_NAME}
-)
+ament_export_libraries(${PROJECT_NAME})
+ament_export_targets(export_${PROJECT_NAME})
 
-ament_export_include_directories(
-  include
-)
+ament_export_include_directories(include)
 
 ament_package()
 
-#install(FILES plugin.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+# install(FILES plugin.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
