Use lfs in gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
 ---
 include:
   - project: mtdi/pi9419/continuous-integration
-    file: ci-templates/auto-rules/with-rosinstall/galactic-default.yml
+    file:
+      - ci-templates/auto-rules/with-rosinstall/galactic-default.yml
+      - ci-templates/lfs-pull.yml
