--- a/map_manager/package.xml
+++ b/map_manager/package.xml
@@ -13,8 +13,8 @@
 
 
     <depend>graph_map</depend>
-    <depend>map_manager_msgs</depend>
-    <depend>python-types-requests</depend>
+    <!-- <depend>map_manager_msgs</depend> -->
+    <!-- <depend>python-types-requests</depend> -->
 
     <!--<depend>message_generation</depend>-->
     <depend>nav_msgs</depend>
@@ -24,7 +24,7 @@
 
     <!--<exec_depend>rosidl_default_runtime</exec_depend>-->
     <exec_depend>math6d</exec_depend>
-    <exec_depend>message_runtime</exec_depend>
+    <!-- <exec_depend>message_runtime</exec_depend> -->
     <exec_depend>python-blinker</exec_depend>
     <exec_depend>python3-ezdxf</exec_depend>
     <exec_depend>python-flask</exec_depend>
@@ -35,7 +35,7 @@
     <exec_depend>python3-pymongo</exec_depend>
     <exec_depend>python3-requests</exec_depend>
     <exec_depend>python-typing</exec_depend>
-    <exec_depend>rospy</exec_depend>
+    <exec_depend>rclpy</exec_depend>
     <exec_depend>tf2_msgs</exec_depend>
     <exec_depend>tf2_ros</exec_depend>
 
