--- a/astar_planner/package.xml
+++ b/astar_planner/package.xml
@@ -7,7 +7,7 @@
     <author>Boeing</author>
     <license>Boeing Proprietary</license>
 
-    <buildtool_depend>catkin</buildtool_depend>
+    <buildtool_depend>ament_cmake</buildtool_depend>
 
     <depend>cv_bridge</depend>
     <depend>eigen</depend>
@@ -17,13 +17,18 @@
     <depend>nav_msgs</depend>
     <depend>navigation_interface</depend>
     <depend>pluginlib</depend>
-    <depend>roscpp</depend>
     <depend>tf2_ros</depend>
     <depend>visualization_msgs</depend>
+    <!--if not included, throws target not found when adding other libraries-->
+    <build_depend>graph_map</build_depend>
+    <build_depend>cartographer_ros_msgs</build_depend>
+    <build_depend>map_manager</build_depend>
+    
 
-    <test_depend>rosunit</test_depend>
+    <!--<test_depend>rosunit</test_depend>-->
 
     <export>
-        <navigation_interface plugin="${prefix}/plugin.xml"/>
+        <build_type>ament_cmake</build_type>
     </export>
+
 </package>
