--- a/navigation_interface/CMakeLists.txt
+++ b/navigation_interface/CMakeLists.txt
@@ -15,27 +15,41 @@ find_package(gridmap REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(OpenCV 4 REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(pluginlib REQUIRED)
 # find_package(xmlrpcpp REQUIRED)
 
-# add_library( ${PROJECT_NAME} include/${PROJECT_NAME}/controller.h include/${PROJECT_NAME}/params.h
-# include/${PROJECT_NAME}/path_planner.h include/${PROJECT_NAME}/trajectory_planner.h
-# include/${PROJECT_NAME}/types/control.h include/${PROJECT_NAME}/types/path.h
-# include/${PROJECT_NAME}/types/trajectory.h src/file.cpp ) catkin_package(INCLUDE_DIRS include CATKIN_DEPENDS
-# geometry_msgs gridmap tf2_ros)
+## adding an exec for testing purposes DEBUG
+#add_executable(file_test src/file_test.cpp)
+#target_include_directories(file_test PUBLIC
+#  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+#  $<INSTALL_INTERFACE:include>)
+#
+#ament_target_dependencies(
+#    file_test
+#    "pluginlib"
+#)
+#
+## END DEBUG
+
 
 # From: https://docs.ros.org/en/foxy/The-ROS2-Project/Contributing/Migration-Guide.html#changing-the-cmake-code
-include_directories(include)
+#include_directories(include)
 
 install(DIRECTORY include/ DESTINATION include)
 
-ament_export_include_directories(include)
+#install(TARGETS file_test
+#  DESTINATION lib/${PROJECT_NAME}) # DEBUG
 
-install(
-    DIRECTORY include/
-    DESTINATION include
-    FILES_MATCHING
-    PATTERN "*.h"
-    PATTERN ".svn" EXCLUDE
+ament_export_include_directories(
+    include
 )
+
+#install(
+#    DIRECTORY include/
+#    DESTINATION include
+#    FILES_MATCHING
+#    PATTERN "*.h"
+#    PATTERN ".svn" EXCLUDE
+#)
 
 ament_package()
