--- a/astar_planner/plugin.xml
+++ b/astar_planner/plugin.xml
@@ -1,5 +1,6 @@
-<library path="lib/libastar_planner">
-  <class name="astar_planner/AStarPlanner" type="astar_planner::AStarPlanner" base_class_type="navigation_interface::PathPlanner">
+<library path="astar_planner">
+  <!--<class name="astar_planner/AStarPlanner" type="astar_planner::AStarPlanner" base_class_type="navigation_interface::PathPlanner">-->
+  <class type="astar_planner::AStarPlanner" base_class_type="navigation_interface::PathPlanner">
     <description>
       A simple implementation of astar
 </description>
