--- a/pure_pursuit_controller/package.xml
+++ b/pure_pursuit_controller/package.xml
@@ -19,11 +19,7 @@
     <depend>sensor_msgs</depend>
     <depend>graph_map</depend>
 
-    <!-- Plugin export in ROS2 is done through the CMakeLists
-    <export>
-        <navigation_interface plugin="${prefix}/plugin.xml"/>
-    </export>-->
-
+    <!-- Plugin export in ROS2 is done through the CMakeLists-->
     <export>
         <build_type>ament_cmake</build_type>
     </export>
