Added unit testing for foxy-devel, dtw still wip

--- a/autonomy/CMakeLists.txt
+++ b/autonomy/CMakeLists.txt
@@ -72,6 +72,23 @@ install(
     RUNTIME DESTINATION bin
 )
 
-# rosidl_generate_interfaces(${PROJECT_NAME}_action "action/Drive.action" DEPENDENCIES geometry_msgs )
+#
+# Add ros tests
+# TODO, Conditional testing
+if(BUILD_TESTING)
+    enable_testing()
+    find_file(NOSETESTS_EXECUTABLE nosetests)
+    add_test(
+        nosetests
+        "${NOSETESTS_EXECUTABLE}"
+        -v
+        --with-xunit
+    )
 
+    install(DIRECTORY test/
+            DESTINATION share/${PROJECT_NAME}/test)
+
+    find_package(launch_testing_ament_cmake)
+    add_launch_test(test/test_drive_to_waypoint.py)
+endif()
 ament_package()
