--- a/autonomy/config/navigation.yaml
+++ b/autonomy/config/navigation.yaml
@@ -2,9 +2,9 @@ path_planner: "astar_planner::AStarPlanner"
 trajectory_planner: "sim_band_planner::SimBandPlanner"
 controller: "pure_pursuit_controller::PurePursuitController"
 
-path_planner_frequency: 0.5
-trajectory_planner_frequency: 8.0
-controller_frequency: 10.0
+path_planner_frequency: 0.5 #0.5
+trajectory_planner_frequency: 8.0 #8.0
+controller_frequency: 10.0 #10.0
 
 OmniRRTPlanner:
     robot_radius: 0.210
@@ -15,7 +15,7 @@ AStarPlanner:
 SimBandPlanner:
     debug_viz: false
     robot_radius: 0.210
-    desired_speed: 0.15
+    desired_speed: 0.15 #0.15
     spline: false
 
 PurePursuitController:
