Added image_transport dep to gridmap

--- a/gridmap/CMakeLists.txt
+++ b/gridmap/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(cartographer_ros_msgs)
 find_package(cv_bridge REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(image_geometry REQUIRED)
+find_package(image_transport REQUIRED)
 find_package(laser_geometry REQUIRED)
 find_package(map_manager REQUIRED)
 find_package(map_msgs REQUIRED)
