--- a/astar_planner/CMakeLists.txt
+++ b/astar_planner/CMakeLists.txt
@@ -24,6 +24,9 @@ find_package(OpenCV 4 REQUIRED)
 find_package(graph_map REQUIRED)
 find_package(cartographer_ros_msgs REQUIRED)
 find_package(map_manager REQUIRED)
+find_package(image_transport)
+find_package(image_geometry)
+find_package(urdf)
 find_package(Boost REQUIRED COMPONENTS system thread chrono)
 
 find_package(Eigen3 REQUIRED)
