--- a/astar_planner/CMakeLists.txt
+++ b/astar_planner/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(ament_cmake REQUIRED)
 
-# find_package( catkin REQUIRED COMPONENTS cv_bridge geometry_msgs gridmap nav_msgs navigation_interface pluginlib
-# roscpp tf2_ros visualization_msgs )
+# find_package( catkin REQUIRED COMPONENTS cv_bridge geometry_msgs gridmap
+# nav_msgs navigation_interface pluginlib roscpp tf2_ros visualization_msgs )
 
 find_package(pluginlib REQUIRED)
 find_package(cv_bridge REQUIRED)
@@ -32,63 +32,63 @@ find_package(Boost REQUIRED COMPONENTS system thread chrono)
 find_package(Eigen3 REQUIRED)
 add_definitions(${EIGEN3_DEFINITIONS} ${Boost_INCLUDE_DIRS})
 
-# catkin_package( INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS cv_bridge geometry_msgs gridmap nav_msgs
-# navigation_interface pluginlib roscpp tf2_ros visualization_msgs DEPENDS EIGEN3 OpenCV )
+# catkin_package( INCLUDE_DIRS include LIBRARIES ${PROJECT_NAME} CATKIN_DEPENDS
+# cv_bridge geometry_msgs gridmap nav_msgs navigation_interface pluginlib roscpp
+# tf2_ros visualization_msgs DEPENDS EIGEN3 OpenCV )
 
 include_directories(SYSTEM ${Eigen3_INCLUDE_DIRS}) # ${catkin_INCLUDE_DIRS})
 
 # include_directories(include)
 
-add_library(${PROJECT_NAME} SHARED src/astar.cpp src/costmap.cpp src/node.cpp src/plugin.cpp src/visualisation.cpp)
+add_library(${PROJECT_NAME} SHARED src/astar.cpp src/costmap.cpp src/node.cpp
+                                   src/plugin.cpp src/visualisation.cpp)
 
-target_include_directories(${PROJECT_NAME} PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-)
+target_include_directories(
+  ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                         $<INSTALL_INTERFACE:include>)
 
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-# target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS}
+# ${catkin_EXPORTED_TARGETS}) target_link_libraries(${PROJECT_NAME}
+# ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
 ament_target_dependencies(
-    ${PROJECT_NAME}
-    Eigen3
-    navigation_interface
-    gridmap
-    graph_map
-    pluginlib
-    cv_bridge
-    geometry_msgs
-    nav_msgs
-    tf2_ros
-    visualization_msgs
-    OpenCV
-    Boost
-)
+  ${PROJECT_NAME}
+  Eigen3
+  navigation_interface
+  gridmap
+  graph_map
+  pluginlib
+  cv_bridge
+  geometry_msgs
+  nav_msgs
+  tf2_ros
+  visualization_msgs
+  OpenCV
+  Boost)
 
 # if(CATKIN_ENABLE_TESTING) find_package(rosunit REQUIRED)
 #
-# catkin_add_gtest(unit_test test/unit_test.cpp) target_link_libraries(unit_test ${PROJECT_NAME} ${OpenCV_LIBRARIES})
-# endif()
+# catkin_add_gtest(unit_test test/unit_test.cpp) target_link_libraries(unit_test
+# ${PROJECT_NAME} ${OpenCV_LIBRARIES}) endif()
 
-# Plugging Declaration
-#pluginlib_export_plugin_description_file(${PROJECT_NAME} plugin.xml)
+# Plugging Declaration pluginlib_export_plugin_description_file(${PROJECT_NAME}
+# plugin.xml)
 pluginlib_export_plugin_description_file(navigation_interface plugin.xml)
 
 install(
-    TARGETS ${PROJECT_NAME}
-    EXPORT export_${PROJECT_NAME} # This one needed?
-    ARCHIVE DESTINATION lib
-    LIBRARY DESTINATION lib
-    RUNTIME DESTINATION bin
-)
+  TARGETS ${PROJECT_NAME}
+  EXPORT export_${PROJECT_NAME} # This one needed?
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin)
 
 install(
-    DIRECTORY include/
-    DESTINATION include
-    PATTERN ".svn" EXCLUDE
-)
+  DIRECTORY include/
+  DESTINATION include
+  PATTERN ".svn" EXCLUDE)
 
-# install( DIRECTORY include/${PROJECT_NAME}/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION} PATTERN ".svn" EXCLUDE )
+# install( DIRECTORY include/${PROJECT_NAME}/ DESTINATION
+# ${CATKIN_PACKAGE_INCLUDE_DESTINATION} PATTERN ".svn" EXCLUDE )
 
 ament_export_libraries(${PROJECT_NAME})
 ament_export_targets(export_${PROJECT_NAME})
