Fixed Clang and CmakeList formatting

--- a/autonomy/CMakeLists.txt
+++ b/autonomy/CMakeLists.txt
@@ -39,24 +39,25 @@ include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
 # add_library(${PROJECT_NAME} SHARED src/autonomy.cpp )
 
 add_executable(
-  ${PROJECT_NAME}
-  include/${PROJECT_NAME}/${PROJECT_NAME}.h include/${PROJECT_NAME}/math.h
-  src/${PROJECT_NAME}.cpp src/main.cpp)
+    ${PROJECT_NAME} include/${PROJECT_NAME}/${PROJECT_NAME}.h include/${PROJECT_NAME}/math.h src/${PROJECT_NAME}.cpp
+                    src/main.cpp
+)
 ament_target_dependencies(
-  ${PROJECT_NAME}
-  geometry_msgs
-  gridmap
-  map_manager
-  map_msgs
-  nav_msgs
-  navigation_interface
-  pluginlib
-  tf2_ros
-  urdf
-  yaml-cpp
-  tf2_geometry_msgs
-  std_srvs
-  ${PROJECT_NAME}_interface)
+    ${PROJECT_NAME}
+    geometry_msgs
+    gridmap
+    map_manager
+    map_msgs
+    nav_msgs
+    navigation_interface
+    pluginlib
+    tf2_ros
+    urdf
+    yaml-cpp
+    tf2_geometry_msgs
+    std_srvs
+    ${PROJECT_NAME}_interface
+)
 
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${YAML_CPP_LIBRARIES})
 
@@ -67,21 +68,22 @@ install(PROGRAMS launch/autonomy_launch.py DESTINATION share/${PROJECT_NAME})
 install(TARGETS ${PROJECT_NAME} DESTINATION lib/${PROJECT_NAME})
 
 install(
-  TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin)
+    TARGETS ${PROJECT_NAME}
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+)
 
 #
 # Add ros tests TODO, Conditional testing
 if(BUILD_TESTING)
-  enable_testing()
-  find_file(NOSETESTS_EXECUTABLE nosetests)
-  add_test(nosetests "${NOSETESTS_EXECUTABLE}" -v --with-xunit)
+    enable_testing()
+    find_file(NOSETESTS_EXECUTABLE nosetests)
+    add_test(nosetests "${NOSETESTS_EXECUTABLE}" -v --with-xunit)
 
-  install(DIRECTORY test/ DESTINATION share/${PROJECT_NAME}/test)
+    install(DIRECTORY test/ DESTINATION share/${PROJECT_NAME}/test)
 
-  find_package(launch_testing_ament_cmake)
-  add_launch_test(test/test_drive_to_waypoint.py)
+    find_package(launch_testing_ament_cmake)
+    add_launch_test(test/test_drive_to_waypoint.py)
 endif()
 ament_package()
