--- a/autonomy_interface/CMakeLists.txt
+++ b/autonomy_interface/CMakeLists.txt
@@ -3,27 +3,25 @@ project(autonomy_interface)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
+    set(CMAKE_C_STANDARD 99)
 endif()
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
+    set(CMAKE_CXX_STANDARD 14)
 endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
+    add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(geometry_msgs REQUIRED)
-# uncomment the following section in order to fill in further dependencies
-# manually. find_package(<dependency> REQUIRED)
+# uncomment the following section in order to fill in further dependencies manually. find_package(<dependency> REQUIRED)
 
 find_package(rosidl_default_generators REQUIRED)
 
-rosidl_generate_interfaces(${PROJECT_NAME} "action/Drive.action" DEPENDENCIES
-                           geometry_msgs)
+rosidl_generate_interfaces(${PROJECT_NAME} "action/Drive.action" DEPENDENCIES geometry_msgs)
 
 ament_package()
