Fixed wrong attr in test_drive_to_waypoint

--- a/autonomy/test/config/navigation.yaml
+++ b/autonomy/test/config/navigation.yaml
@@ -39,6 +39,7 @@ costmap:
 #      - {name: laser_back, type: 'gridmap::LaserData'}
     scan:
       sub_sample: 10
+      topic: "scan"
 
   sonar_data:
     data_sources:
